[package]
name = "seventeen-piano"
version = "0.1.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2018"
description = "Seventeen tone (per octave) piano"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finegeometer/seventeen-piano"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',

  'AudioContext',
  'AudioNode',
  'AudioDestinationNode',
  'AudioParam',
  'OscillatorNode',
  'OscillatorType',
  'GainNode',
  'PeriodicWave',

  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Node',
  'KeyboardEvent',
  'Window',
]